fix: save to close and overflow/feat: popup mobile

--- a/blocks/popup/__botton-save/popup__botton-save.css
+++ b/blocks/popup/__botton-save/popup__botton-save.css
@@ -7,8 +7,14 @@
   color: #FFF;
   background-color: #000;
   border-radius: 2px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   margin: 18px 0 0 0;
   padding: 0;
+}
+
+@media screen and (max-width: 526px) {
+  .popup__button-save {
+    margin: 15px 0 0 0;
+  }
 }
