--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -1,7 +1,18 @@
 .popup__button-close {
-  position: relative;
-  left: 438px;
-  bottom: 40px;
+  position: fixed;
+  right: calc(50vw - 255px);
+  top: calc(50vh - 205px);
   padding: 0;
   border: none;
+  width: 32px;
+  height: 32px;
+}
+
+@media screen and (max-width: 526px) {
+  .popup__button-close {
+    top: calc(50vh - 197px);
+    right: 19px;
+    width: 20px;
+    height: 20px;
+  }
 }
