--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -1,4 +1,4 @@
 .popup__close-icon {
-  width: 32px;
-  height: 32px;
+  width: 100%;
+  height: 100%;
 }
