--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -3,5 +3,11 @@
   flex-direction: column;
   padding: 0;
   border: none;
-  margin: 2px 36px 37px;
+  margin: 34px 36px 37px;
+}
+
+@media screen and (max-width: 526px) {
+  .popup__form {
+    margin: 25px 22px;
+  }
 }
