--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,11 @@
   line-height: 29px;
   margin: 0 0 41px 0;
 }
+
+@media screen and (max-width: 526px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin: 0 0 62px 0;
+  }
+}
