--- a/blocks/profile/__about-me.css/profile__about-me.css
+++ b/blocks/profile/__about-me.css/profile__about-me.css
@@ -7,6 +7,10 @@
   line-height: 22px;
   color: #FFF;
   margin: 0;
+  max-width: 300px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 710px) {
@@ -18,6 +22,7 @@
 
 @media screen and (max-width: 515px) {
   .profile__about-me {
+    max-width: 190px;
     font-size: 14px;
     line-height: 17px;
   }
